// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerModal should be rendered correctly 1`] = `
<div
  className="container modalBlocker"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-modal={true}
      className="uui-modal-window modal container"
      role="modal"
      style={
        Object {
          "height": "700px",
          "width": "600px",
        }
      }
    >
      <div
        className="root size-36 padding-24 vPadding-12 spacing-12 modalHeader container align-items-center"
        style={
          Object {
            "columnGap": undefined,
            "rowGap": undefined,
          }
        }
      >
        <div
          className="uui-font-semibold uui-text-primary root line-height-24 font-size-18 v-padding-12 container"
        >
          Please select
        </div>
        <div
          className="flexSpacer"
        />
        <div
          className="flexCell"
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "auto",
              "flexGrow": undefined,
              "flexShrink": 0,
              "minWidth": 0,
              "textAlign": undefined,
            }
          }
        >
          <button
            className="container uui-button-box uui-enabled -clickable icon-button-default root"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        className="flexCell subHeaderWrapper"
        style={
          Object {
            "alignSelf": undefined,
            "flexBasis": "0",
            "flexGrow": undefined,
            "flexShrink": undefined,
            "minWidth": 0,
            "textAlign": undefined,
          }
        }
      >
        <div
          className="root size-36 vPadding-24 container align-items-center"
          style={
            Object {
              "columnGap": undefined,
              "rowGap": undefined,
            }
          }
        >
          <div
            className="container uui-input-box -clickable root size-36 mode-form"
            onBlur={[Function]}
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
            <input
              aria-invalid={false}
              autoFocus={true}
              className="uui-input"
              inputMode="search"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Type text for quick search"
              tabIndex={0}
              type="search"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="root size-36 body modal undefined container align-items-center"
        style={
          Object {
            "columnGap": undefined,
            "maxHeight": undefined,
            "rowGap": undefined,
          }
        }
      >
        <div
          className="root scrollContainer"
          cx="scrollContainer"
          style={
            Object {
              "display": "flex",
              "height": "100%",
              "overflow": "hidden",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "bottom": 0,
                "display": "flex",
                "flex": "1 1 auto",
                "flexDirection": "column",
                "left": 0,
                "marginBottom": 0,
                "marginRight": 0,
                "overflow": "scroll",
                "position": "relative",
                "right": 0,
                "top": 0,
              }
            }
          >
            <div
              className="listContainer"
              style={
                Object {
                  "minHeight": "0px",
                }
              }
            >
              <div
                role="listbox"
                style={
                  Object {
                    "marginTop": 0,
                  }
                }
              >
                <div
                  aria-posinset={1}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={2}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={3}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={4}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={5}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={6}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={7}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={8}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={9}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={10}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={11}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="uui-track-horizontal"
            style={
              Object {
                "display": "none",
                "height": 6,
                "position": "absolute",
              }
            }
          >
            <div
              className="uui-thumb-horizontal"
            />
          </div>
          <div
            className="uui-track-vertical"
            style={
              Object {
                "display": "none",
                "position": "absolute",
                "width": 6,
              }
            }
          >
            <div
              className="uui-thumb-vertical"
            />
          </div>
        </div>
      </div>
      <div
        className="root size-36 padding-24 vPadding-24 spacing-12 modalFooter container align-items-center"
        style={
          Object {
            "columnGap": undefined,
            "rowGap": undefined,
          }
        }
      >
        <div
          className="flexSpacer"
        />
        <button
          className="container uui-button-box uui-enabled -clickable button-secondary root size-36 mode-outline"
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="uui-caption"
          >
            Cancel
          </div>
        </button>
        <button
          className="container uui-button-box uui-enabled -clickable button-accent root size-36 mode-solid"
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="uui-caption"
          >
            Select
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
</div>
`;

exports[`PickerModal should be rendered correctly 2`] = `
<div
  className="container modalBlocker"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-modal={true}
      className="uui-modal-window modal container"
      role="modal"
      style={
        Object {
          "height": "700px",
          "width": "600px",
        }
      }
    >
      <div
        className="root size-36 padding-24 vPadding-12 spacing-12 modalHeader container align-items-center"
        style={
          Object {
            "columnGap": undefined,
            "rowGap": undefined,
          }
        }
      >
        <div
          className="uui-font-semibold uui-text-primary root line-height-24 font-size-18 v-padding-12 container"
        >
          Please select
        </div>
        <div
          className="flexSpacer"
        />
        <div
          className="flexCell"
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "auto",
              "flexGrow": undefined,
              "flexShrink": 0,
              "minWidth": 0,
              "textAlign": undefined,
            }
          }
        >
          <button
            className="container uui-button-box uui-enabled -clickable icon-button-default root"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        className="flexCell subHeaderWrapper"
        style={
          Object {
            "alignSelf": undefined,
            "flexBasis": "0",
            "flexGrow": undefined,
            "flexShrink": undefined,
            "minWidth": 0,
            "textAlign": undefined,
          }
        }
      >
        <div
          className="root size-36 vPadding-24 container align-items-center"
          style={
            Object {
              "columnGap": undefined,
              "rowGap": undefined,
            }
          }
        >
          <div
            className="container uui-input-box -clickable root size-36 mode-form"
            onBlur={[Function]}
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
            <input
              aria-invalid={false}
              autoFocus={true}
              className="uui-input"
              inputMode="search"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Type text for quick search"
              tabIndex={0}
              type="search"
              value=""
            />
          </div>
        </div>
        <label
          className="container switch-vars root size-18 switch uui-disabled"
        >
          <div
            className="uui-switch-body"
          >
            <input
              aria-checked={false}
              aria-disabled={true}
              checked={false}
              disabled={true}
              onChange={[Function]}
              role="switch"
              type="checkbox"
            />
            <div
              className="uui-switch-toggler"
            />
          </div>
          <div
            className="uui-input-label"
          >
            Show only selected
          </div>
        </label>
      </div>
      <div
        className="root size-36 body modal undefined container align-items-center"
        style={
          Object {
            "columnGap": undefined,
            "maxHeight": undefined,
            "rowGap": undefined,
          }
        }
      >
        <div
          className="root scrollContainer"
          cx="scrollContainer"
          style={
            Object {
              "display": "flex",
              "height": "100%",
              "overflow": "hidden",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "bottom": 0,
                "display": "flex",
                "flex": "1 1 auto",
                "flexDirection": "column",
                "left": 0,
                "marginBottom": 0,
                "marginRight": 0,
                "overflow": "scroll",
                "position": "relative",
                "right": 0,
                "top": 0,
              }
            }
          >
            <div
              className="listContainer"
              style={
                Object {
                  "minHeight": "0px",
                }
              }
            >
              <div
                role="listbox"
                style={
                  Object {
                    "marginTop": 0,
                  }
                }
              >
                <div
                  aria-checked={false}
                  aria-posinset={1}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                      tabIndex={-1}
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        >
                          C2
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={2}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                      tabIndex={-1}
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        >
                          C1+
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={3}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                      tabIndex={-1}
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        >
                          C1
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={4}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                      tabIndex={-1}
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        >
                          B2+
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={5}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                      tabIndex={-1}
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        >
                          B2
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={6}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                      tabIndex={-1}
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        >
                          B1+
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={7}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                      tabIndex={-1}
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        >
                          B1
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={8}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                      tabIndex={-1}
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        >
                          A2+
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={9}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                      tabIndex={-1}
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        >
                          A2
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={10}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                      tabIndex={-1}
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        >
                          A1+
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={11}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "columnGap": undefined,
                      "rowGap": undefined,
                    }
                  }
                >
                  <div
                    className="uui-table-cell cell data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    role="cell"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                      tabIndex={-1}
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="contentWrapper"
                      style={
                        Object {
                          "alignSelf": undefined,
                          "justifyContent": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="uui-font-regular uui-text-primary root line-height-18 font-size-14 v-padding-9 container"
                        >
                          A1
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="uui-track-horizontal"
            style={
              Object {
                "display": "none",
                "height": 6,
                "position": "absolute",
              }
            }
          >
            <div
              className="uui-thumb-horizontal"
            />
          </div>
          <div
            className="uui-track-vertical"
            style={
              Object {
                "display": "none",
                "position": "absolute",
                "width": 6,
              }
            }
          >
            <div
              className="uui-thumb-vertical"
            />
          </div>
        </div>
      </div>
      <div
        className="root size-36 padding-24 vPadding-24 spacing-12 modalFooter container align-items-center"
        style={
          Object {
            "columnGap": undefined,
            "rowGap": undefined,
          }
        }
      >
        <button
          className="container uui-button-box uui-enabled -clickable root size-36 uui-no-left-icon uui-no-right-icon link-button-primary"
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="uui-caption"
          >
            SELECT ALL
          </div>
        </button>
        <div
          className="flexSpacer"
        />
        <button
          className="container uui-button-box uui-enabled -clickable button-secondary root size-36 mode-outline"
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="uui-caption"
          >
            Cancel
          </div>
        </button>
        <button
          className="container uui-button-box uui-enabled -clickable button-accent root size-36 mode-solid"
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="uui-caption"
          >
            Select
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
</div>
`;
